# slurm-submit

./: .gitignore  LICENSE  README.md
bash-submit/: setup.sh
bash-submit/config/: defaults.sh
bash-submit/lib/: args.sh  backup.sh  config.sh  core.sh  manifest.sh  partition.sh  sbatch.sh  scratch.sh
bash-submit/modules/: cfour.sh  dalton.sh  dirac.sh  exec.sh  gaussian.sh  molpro.sh  nwchem.sh  orca.sh  python.sh  sharc.sh  (+3 more)
python-submit/: pyproject.toml
python-submit/config/: defaults.toml
python-submit/config/software/: cfour.toml  dalton-dev.toml  dalton.toml  dirac.toml  gaussian.toml  molpro.toml  nwchem.toml  orca.toml  python.toml  sharc.toml  std2.toml  turbomole.toml  xtb.toml
python-submit/src/slurm_submit/: __init__.py  __main__.py  args.py  backup.py  cli.py  config.py  core.py  manifest.py  module_base.py  partition.py  sbatch.py  scratch.py
python-submit/src/slurm_submit/modules/: __init__.py  cfour.py  dalton.py  dirac.py  exec_mod.py  gaussian.py  molpro.py  nwchem.py  orca.py  python_mod.py  sharc.py  std2.py  turbomole.py  xtb.py
python-submit/tests/: conftest.py  test_args.py  test_backup.py  test_cli.py  test_config.py  test_core.py  test_manifest.py  test_module_base.py  test_partition.py  test_sbatch.py  test_scratch.py
python-submit/tests/modules/: test_cfour.py  test_dalton.py  test_dirac.py  test_exec_mod.py  test_gaussian.py  test_molpro.py  test_nwchem.py  test_orca.py  test_python_mod.py  test_sharc.py  test_std2.py  test_turbomole.py  test_xtb.py
tests/: export-validate.sh  parse-results.sh  register.sh  submit-tests.sh
(+102 files in other folders)
